[package]
name = "spinirq"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`no_std` spin lock implementation that can disable kernel local IRQs or preemption while locking"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/spinirq"
documentation = "https://rcore-os.github.io/arceos/spinirq/index.html"

[dependencies]
cfg-if = "1.0"
kernel_guard = { git = "ssh://git@github.com/shilei-massclouds/kernel_guard" }
